src/objects/NonLNEBudget__c.object
<CustomObject>
    <description>Marketing budgets funded by 3rd-party sponsors</description>
    <fields>
        <fullName>AdPlanName__c</fullName>
        <formula>AdPlan__r.AdPlanName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdPlan__c</fullName>
        <label>Ad Plan</label>
        <referenceTo>AdPlan__c</referenceTo>
        <relationshipLabel>Non-LNE Budgets</relationshipLabel>
        <relationshipName>Non_LNE_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sponsor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non-LNE Budgets</relationshipLabel>
        <relationshipName>Non_LNE_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fxBudget__c</fullName>
        <formula>(Budget__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Non-LNE Budget</label>
    <nameField>
        <displayFormat>NLB-{000000}</displayFormat>
        <label>Non-LNE Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-LNE Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>